[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Number.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bg2.jpg" type="Texture" id=4]
[ext_resource path="res://scenes/NumberSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/MrDafoe-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/btn_play-again.png" type="Texture" id=7]
[ext_resource path="res://assets/btn_menu.png" type="Texture" id=8]
[ext_resource path="res://assets/gameover_postit.png" type="Texture" id=9]
[ext_resource path="res://fonts/mayqueen.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/seperator_white.png" type="Texture" id=11]
[ext_resource path="res://assets/btn_play-again_selected.png" type="Texture" id=12]
[ext_resource path="res://assets/btn_play-again_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/btn_menu_selected.png" type="Texture" id=14]
[ext_resource path="res://assets/btn_menu_hover.png" type="Texture" id=15]
[ext_resource path="res://scenes/WrongNumberParticles.tscn" type="PackedScene" id=16]
[ext_resource path="res://sounds/rpg.ogg" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 600 )

[sub_resource type="DynamicFont" id=2]
size = 180
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 76
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 84
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
resource_name = "fade"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/InfoLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BG_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -16.0
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1500, 0 )

[node name="bg2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 750, 534 )
rotation = -1.5708
texture = ExtResource( 4 )

[node name="Seperators" type="Node2D" parent="."]

[node name="seperator_white" type="Sprite" parent="Seperators"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 750, 139 )
texture = ExtResource( 11 )

[node name="seperator_white2" type="Sprite" parent="Seperators"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 750, 390 )
texture = ExtResource( 11 )

[node name="seperator_white3" type="Sprite" parent="Seperators"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 750, 640 )
texture = ExtResource( 11 )

[node name="seperator_white4" type="Sprite" parent="Seperators"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 750, 890 )
texture = ExtResource( 11 )

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 128, 256 )

[node name="Position2" type="Position2D" parent="."]
position = Vector2( 128, 512 )

[node name="Position3" type="Position2D" parent="."]
position = Vector2( 128, 768 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="NumberSpawner" parent="." instance=ExtResource( 5 )]
spawn_positions = [ Vector2( 1600, 256 ), Vector2( 1600, 512 ), Vector2( 1600, 768 ) ]
number_scene = ExtResource( 3 )
spawn_frequency = 5.0
max_number = 99

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -43, 536 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="label_failed" type="Label" parent="HUD"]
modulate = Color( 0.831373, 0, 0, 1 )
margin_left = 96.0
margin_top = -8.0
margin_right = 208.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 2 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_score" type="Label" parent="HUD"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -508.0
margin_top = 24.0
margin_right = 37.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
text = "Score: 123456"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="CenterContainer" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/GameOver"]
margin_left = 216.0
margin_top = 85.0
margin_right = 1284.0
margin_bottom = 982.0
texture = ExtResource( 9 )

[node name="gameover_label_score" type="Label" parent="HUD/GameOver/TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 392.0
margin_top = 379.0
margin_right = 607.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 4 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameover_label_highscore" type="Label" parent="HUD/GameOver/TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 230.0
margin_top = 483.0
margin_right = 624.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 4 )
text = "HighScore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayagainButton" type="TextureButton" parent="HUD/GameOver/TextureRect"]
margin_left = 81.0
margin_top = 675.0
margin_right = 526.0
margin_bottom = 811.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="HUD/GameOver/TextureRect"]
margin_left = 561.0
margin_top = 667.0
margin_right = 1006.0
margin_bottom = 803.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="HUD"]
modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -523.0
margin_top = -171.0
margin_right = 621.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 5 )
text = "Find the number thats divisible by 7.
Use arrow keys \"UP\" and \"DOWN\" to swtich rows."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberParticles" parent="." instance=ExtResource( 16 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 6 )

[node name="InfoTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 35.0
autostart = true
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="HUD/GameOver/TextureRect/PlayagainButton" to="." method="_on_PlayagainButton_pressed"]
[connection signal="pressed" from="HUD/GameOver/TextureRect/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="timeout" from="InfoTimer" to="." method="_on_InfoTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
